tests/ui/statics/unsized_type2.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/unsized_type2.rs:14:1
   |
LL | pub static WITH_ERROR: Foo = Foo { version: 0 };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `Foo`, the trait `Sized` is not implemented for `str`
note: required because it appears within the type `Foo`
  --> $DIR/unsized_type2.rs:5:12
   |
LL | pub struct Foo {
   |            ^^^
   = note: statics and constants must have a statically known size

error[E0308]: mismatched types
  --> $DIR/unsized_type2.rs:14:45
   |
LL | pub static WITH_ERROR: Foo = Foo { version: 0 };
   |                                             ^ expected `str`, found integer

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/unsized_type2.rs:14:30
   |
LL | pub static WITH_ERROR: Foo = Foo { version: 0 };
   |                              ^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `Foo`, the trait `Sized` is not implemented for `str`
note: required because it appears within the type `Foo`
  --> $DIR/unsized_type2.rs:5:12
   |
LL | pub struct Foo {
   |            ^^^
   = note: structs must have a statically known size to be initialized

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
